--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h2 {
 .hero {
   position: relative;
   height: 60vh;
-  background: url('images/header-bg.jpg') center/cover no-repeat;
+  background: url('/Background.jpg') center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
